--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 	<head>
 		<title>Test SEO</title>
 		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" type="text/css" href="/css/main.css"> 
+		<meta content="test SEO" /> <meta content="vaninayk" /> 
 	</head>
 	<body>
 		<nav>
