--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Test SEO</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css"> 
-		<meta content="test SEO" /> <meta content="vaninayk" /> 
+		<meta name="keyword" content="test SEO, landing page, getting started with SEO, Find the page, be familiar with SEO" />  
 	</head>
 	<body>
 		<nav>
