--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/mywebsite/">Home</a></li>
+        		<li><a href="/mywebsite/index">Home</a></li>
 	        	<li><a href="/mywebsite/about">About</a></li>
-        		<li><a href="/mywebsite../cv">CV</a></li>
+        		<li><a href="/mywebsite/cv">CV</a></li>
         		<li><a href="/mywebsite/blog">Blog</a></li>
     		</ul>
 		</nav>
