--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Test SEO</title>
+		<title>Landing Page of SSO onboarding</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css"> 
 		<meta name="keyword" content="test SEO, landing page, getting started with SEO, Find the page, be familiar with SEO" />  
